<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_slogan">Water Quality System</string>
    <string name="compost">Compost</string>
    <string name="soil">Soil</string>
    <string name="water">Water</string>
    <string name="copyright">Copyright © ffem</string>
    <string name="legal_info">Legal Information</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="testing">Testing</string>
    <string name="align_color_card">Align the color card within the view above</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="camera">Camera</string>
    <string name="delete">Delete</string>
    <string name="delete_selected_result">Delete selected result?</string>
    <string name="deleted">Deleted</string>

    <!-- Software notices -->
...
    <string name="version_has_expired">This version of the app has expired.</string>
    <string name="uninstall_install_from_store">Please uninstall and then install the latest version from Play Store.</string>

    <string name="result_list">List of results</string>
    <string name="no_data">No test results yet</string>
    <string name="tap_to_start">Tap the <b>+</b> button below to\nlaunch a new test.</string>
    <string name="start_test">Start test</string>
    <string name="compost_test">Compost Test</string>
    <string name="soil_test">Soil Test</string>
    <string name="card_test">Simple Card Test</string>
    <string name="colorimetric_test">Colorimetric Test</string>
    <string name="titration_test">Titration Test</string>
    <string name="external_meter">External Meter</string>
...
    <string name="invalid_image">Invalid image</string>
    <string name="result">Result</string>
    <string name="analyzed_photo">Analyzed Photo</string>
    <string name="color_extracts">Colors detected</string>
    <string name="confirm_color_extract">If the color detection above is incorrect, redo the capture with better light conditions.</string>
    <string name="result_image">Result image</string>
    <string name="start">Start</string>
    <string name="instructions">Instructions</string>
    <string name="place_card_and_cuvette">Place the card and cuvette with the water sample on the provided stand.</string>
    <string name="when_ready_camera">When ready, point the phone camera at it.</string>
    <string name="click_launch_camera">Click <b>Start</b> below to launch the camera preview.</string>
    <string name="camera_start_align_card">When the camera starts, align the card in the viewer as shown in the example above.</string>
    <string name="continue_on">Continue</string>
    <string name="redo">Redo</string>
    <string name="navigate_up">Navigate up</string>
    <string name="analyzing_photo">Analyzing photo…</string>
    <string name="brightness">Brightness</string>
    <string name="closer">Closer</string>
    <string name="too_close">Too close</string>
    <string name="confirm_calibration">Confirm Calibration</string>
    <string name="confirm">Confirm</string>
    <string name="select_calibration_point">Select calibration point</string>
    <string name="select_standard_measured">Select the value of the standard measured</string>
    <string name="color_shift">Color shift</string>
    <string name="skip">Skip</string>

    <!-- ErrorType -->
...
    <string name="error_test_not_available">Requested test is not available</string>
    <string name="please_contact_support">Please contact technical support</string>
    <string name="cannot_start_test">Cannot start test</string>
    <string name="error">Error</string>
    <string name="required">Required</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="calibrate">Calibrate</string>
    <string name="select_test">Select Test</string>
    <string name="calibrate_summary">Calibrate using a standard</string>
    <string name="calibrated_successfully">%s calibrated successfully</string>
    <string name="tilt_backwards">Tilt phone backwards</string>
    <string name="tilt_forwards">Tilt phone forwards</string>
    <string name="tilt_left_forwards">Tilt phone left side forwards</string>
...
    <string name="gps_instructions">Stand near the water source but away from objects that could block the GPS signals</string>
    <string name="location_permission">Location permission is required</string>
    <string name="accuracy">Accuracy</string>
    <string name="getting_location">Getting location</string>
    <string name="accept_location">Accept</string>
    <string name="lat_lon">Lat/Lon</string>
    <string name="save">Save</string>
    <string name="required_error">This is required</string>
    <string name="invalid_email">Please enter valid email</string>
    <string name="info">Info</string>
    <string name="manual_photo_capture">Manual photo capture</string>
    <string name="manual_photo_summary">Turn this on if the auto photo capture is not working well on this phone</string>
    <string name="airplane_mode_off">Please turn off airplane mode</string>
...
    <string name="not_found">Not found</string>
    <string name="recent">Recent</string>
    <string name="all">All</string>
    <string name="select_date">Select date</string>
    <string name="all_values_in_kg_ha">(All values in kg/ha)</string>
    <string name="redo_test">Redo</string>
    <string name="done">Done</string>
    <string name="c_empty">Empty contents of the cuvette and rinse it</string>
    <string name="external_app_not_installed">External app is not installed.</string>
    <string name="install_external_app">Please install the External app from your instance.</string>

    <string name="analytics_preferences">Usage data</string>
    <string name="analytics">Collect anonymous usage data</string>
...
