...
    <string name="colorDistanceToleranceKey">colorDistanceTolerance</string>
    <string name="maxCardColorDistanceAllowedKey">maxCardCalibrationDistance</string>
    <string name="minimum_brightness">minBrightness</string>
    <string name="maximum_brightness">maxBrightness</string>
    <string name="shadow_tolerance">maxshadowTolerance</string>
    <string name="useFlashModeKey">userFlashMode</string>
    <string name="testImageNumberKey">testImageNumber</string>
    <string name="diagnosticEnableTimeKey">diagnosticEnableTime</string>
    <string name="colorAverageDistanceToleranceKey">maxAvgColorDistanceTolerance</string>
    <string name="runColorCardTestKey">runColorCardTest</string>
    <string name="runColorCardPrefKey">runColorCardPref</string>
    <string name="soundOnKey">soundOn</string>
    <string name="torchModeKey">torchModeKey</string>
...
    <string name="cameraFocusMode">Camera Focus Mode</string>
    <string name="flashMode">Camera Flash Torch Mode</string>

    <string-array name="pref_card_options">
        <item>"Auto"</item>
        <item>"Rectangle Swatch"</item>
        <item>"Circle Swatch"</item>
    </string-array>

    <string-array name="pref_card_option_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
...
